crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.context-variable-only-chained-assign/error.txt
Found 1 error:

Error: Cannot reassign variable after render completes

Reassigning `x` after render has completed can cause inconsistent behavior on subsequent renders. Consider using state instead.

error.context-variable-only-chained-assign.ts:10:19
   8 |   };
   9 |   const fn2 = () => {
> 10 |     const copy2 = (x = 4);
     |                    ^ Cannot reassign `x` after render completes
  11 |     return [invoke(fn1), copy2, identity(copy2)];
  12 |   };
  13 |   return invoke(fn2);
